--- a/src/icp_hello_world_frontend/src/index.html
+++ b/src/icp_hello_world_frontend/src/index.html
@@ -16,7 +16,7 @@
     <br />
     <br />
     <form action="#">
-      <label for="name">Enter asdour name: &nbsp;</label>
+      <label for="name">Enter your last name: &nbsp;</label>
       <input id="name" alt="Name" type="text" />
       <button type="submit">Click Me!</button>
     </form>
