--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>icp_hello_world_rust_motoko</title>
+    <title>Hello World</title>
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
     <link type="text/css" rel="stylesheet" href="main.css" />
+    <script type="module" src="index.js"></script>
   </head>
   <body>
     <main>
